# zeitfenster

./: .envrc.dist  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  compose.prod.yaml  compose.yaml  config.example.yaml  flake.nix  pod.yaml  pyproject.toml
.claude/: settings.json
demo/: .env  config.yaml  init-calendars.sh
demo/radicale/: config  users
src/zeitfenster/: app.py  availability.py  caldav_client.py  config.py  email.py  generator.py  ics.py  ics_client.py  parsing.py  zeitfenster_client.py
src/zeitfenster/static/: booking.js  embed-runtime.js  embed.js  style.css
src/zeitfenster/templates/: base.html.j2  index.html.j2  placeholder.html.j2  thankyou.html.j2
tests/: test_app.py  test_availability.py  test_caldav_client.py  test_config.py  test_email.py  test_generator.py  test_ics.py  test_ics_client.py  test_parsing.py  test_zeitfenster_client.py
